--- a/edit_profile.html
+++ b/edit_profile.html
@@ -96,46 +96,46 @@
                         </div>
                     </div>  
                 </div> 
-            </form>    
+               
 
-            <div class="row px-xl-5 px-3">
-                <div class="col-lg-4 col-12 pt-4">
-                    <h4><strong>Gender</strong></h4>
-                    <div class="form-check">
-                        <label class="form-check-label fs_18px-s">
-                          <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="male" id="male-d" value="male" checked>
-                            <span class="pl-3">Male</span>
-                        </label>
-                          <label class="form-check-label fs_18px-s ml-5">
-                          <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="female" id="female-d" value="female">
-                            <span class="pl-3"> Female</span>
-                        </label>
-                    </div>
-                </div>
-
-                <div class="col-lg-8 col-12 pt-4">
-                    <h4><strong>Position</strong></h4>
-                    <div class="form-check">
-                        <label class="form-check-label fs_18px-s">
-                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="goalkeeper" id="goalkeeper-d" value="goalkeeper" checked>
-                            <span class="pl-3">Goalkeeper</span>
-                        </label>
-                        <label class="form-check-label fs_18px-s ml-5">
-                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="defender" id="defender-d" value="defender">
-                            <span class="pl-3">Defernder</span>
-                        </label>
-                        <label class="form-check-label fs_18px-s ml-5">
-                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="midfielder" id="midfielder-d" value="midfielder" checked>
-                            <span class="pl-3">Midfielder</span>
-                        </label>
+                <div class="row px-xl-5 px-3">
+                    <div class="col-lg-4 col-12 pt-4">
+                        <h4><strong>Gender</strong></h4>
+                        <div class="form-check">
+                            <label class="form-check-label fs_18px-s">
+                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="gender" id="male-d" value="male" checked>
+                                <span class="pl-3">Male</span>
+                            </label>
                             <label class="form-check-label fs_18px-s ml-5">
-                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="forward" id="forward-d" value="forward">
-                            <span class="pl-3">Forward</span>
-                        </label>
+                            <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="gender" id="female-d" value="female">
+                                <span class="pl-3"> Female</span>
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-8 col-12 pt-4">
+                        <h4><strong>Position</strong></h4>
+                        <div class="form-check">
+                            <label class="form-check-label fs_18px-s">
+                                <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="goalkeeper-d" value="goalkeeper" checked>
+                                <span class="pl-3">Goalkeeper</span>
+                            </label>
+                            <label class="form-check-label fs_18px-s ml-5">
+                                <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="defender-d" value="defender">
+                                <span class="pl-3">Defernder</span>
+                            </label>
+                            <label class="form-check-label fs_18px-s ml-5">
+                                <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="midfielder-d" value="midfielder" checked>
+                                <span class="pl-3">Midfielder</span>
+                            </label>
+                                <label class="form-check-label fs_18px-s ml-5">
+                                <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="forward-d" value="forward">
+                                <span class="pl-3">Forward</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
-            </div>
-
+            </form> 
             <div class="row px-xl-5 px-3 py-5">
                 <div class="col-12 text-right">
                     <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white w_184px-s"><strong>SAVE</strong></button>
