complete rating screen

--- a/rating_player.html
+++ b/rating_player.html
@@ -34,7 +34,7 @@
 
         <div class="container-fluid bg-white br_47px-s mt-5">
             <div class="row py-4 px-xl-4 px-3">
-                <div class="col-8 d-flex">
+                <div class="col-md-8 col-12 d-flex">
                     <div class="align-self-center">
                         <img src="assets/images/user_img.png" width="80" class="rounded-circle border_green-s" alt="">
                     </div>
@@ -51,7 +51,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="d-flex opacity_4-s">
+                        <div class="d-md-flex opacity_4-s">
                             <h6>Age (year):</h6>
                             <h6 class="pl-2 ">33</h6>
                             <span class="px-2">|</span>
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 text-right">
+                <div class="col-md-4 col-12 text-right">
                     <p class="fg_yellow-s fs_27px-s mb-0">
                         <i class="fa fa-star-o" aria-hidden="true"></i>
                         <i class="fa fa-star-o" aria-hidden="true"></i>
@@ -82,24 +82,85 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row px-xl-4 px-3">
                 <div class="fg_green-s col-12 text-center">
                     <h3>GIVE YOUR RATING</h3>
                 </div>
                 <div class="col-12">
-                    <form>
-                        <div class="row">
-                            <div class="col-lg-4">
+                    <form action="">
+                        <div class="row px-xl-4 px-3">
+                            <div class="col-lg-4 col-md-6 col-12 mt-2">
                                 <div class="d-flex justify-content-between">
                                     <h5><strong>ABILITY</strong></h5>
                                     <h5 id="ability-d">3.5</h5>
                                 </div>
                                 <div class="form-group rating_filed-s border">
-                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4" id="">
+                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-12 mt-2">
+                                <div class="d-flex justify-content-between">
+                                    <h5><strong>ABILITY</strong></h5>
+                                    <h5 id="ability-d">3.5</h5>
+                                </div>
+                                <div class="form-group rating_filed-s border">
+                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-12 mt-2">
+                                <div class="d-flex justify-content-between">
+                                    <h5><strong>ABILITY</strong></h5>
+                                    <h5 id="ability-d">3.5</h5>
+                                </div>
+                                <div class="form-group rating_filed-s border">
+                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-12 mt-2">
+                                <div class="d-flex justify-content-between">
+                                    <h5><strong>ABILITY</strong></h5>
+                                    <h5 id="ability-d">3.5</h5>
+                                </div>
+                                <div class="form-group rating_filed-s border">
+                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-12 mt-2">
+                                <div class="d-flex justify-content-between">
+                                    <h5><strong>ABILITY</strong></h5>
+                                    <h5 id="ability-d">3.5</h5>
+                                </div>
+                                <div class="form-group rating_filed-s border">
+                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-12 mt-2">
+                                <div class="d-flex justify-content-between">
+                                    <h5><strong>ABILITY</strong></h5>
+                                    <h5 id="ability-d">3.5</h5>
+                                </div>
+                                <div class="form-group rating_filed-s border">
+                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-6 col-12 mt-2">
+                                <div class="d-flex justify-content-between">
+                                    <h5><strong>ABILITY</strong></h5>
+                                    <h5 id="ability-d">3.5</h5>
+                                </div>
+                                <div class="form-group rating_filed-s border">
+                                    <input type="range" min="1.0" max="5.0" value="3.5" class="form-control-range py-4 ratig_slider-s mx-auto" id="">
                                 </div>
                             </div>
                         </div>
                     </form>
+
+                    <div class="row px-xl-4 px-3 py-3">
+                        <div class="col-12 d-flex justify-content-end">
+                            <h5 class="mb-0 align-self-center"><strong>YOUR RATING IS <span>4.5</span></strong></h5>
+                            <button type="submit" class=" ml-3 br_10px-s bg_green-s text-white w_184px-s py-3 border-0"><strong>SUBMIT</strong></button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
