--- a/chat.html
+++ b/chat.html
@@ -243,7 +243,7 @@
                         <!-- ----- chat member list - end ----- -->
 
                         <!-- ----- chat room - start ----- -->
-                        <div class="col-8 col-md-8 col-lg-8 col-xl-8 border border-top-0">
+                        <div class="col-8 col-md-8 col-lg-8 col-xl-8 border border-top-0 w-100">
 
                             <!-- profile detail of next person in chat - start -->
                             <div class="row">
@@ -281,82 +281,79 @@
                             <!-- next person in chat -->
 
                             <div class="row py-3">
-                                <div class="col-1 px-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-5">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-xl-5 ml-lg-3 ml-md-2 ml-2">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                     </div>
                                 </div>
-                                <div class="col-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
+                                <div class="col-7 col-md-5 col-lg-6 col-xl-5 ml-md-0 ml-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                     </p>
                                 </div>
-                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-xl-1 offset-md-2">
+                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
                                     <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
                                 </div>
-                                <div class="col-7"></div>
                             </div>
                             <!-- next person in chat -->
 
                             <!-- first person in chat -->
 
-                            <div class="row py-3">
-                                <div class="col-7"></div>
-                                <div class="col-4 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                            <div class="row py-3 justify-content-end">
+                                <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
                                     </p>
                                 </div>
-                                <div class="col-1 px-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-4">
+                                <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-md-2 ml-0">
                                         <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
                                     </div>
                                 </div>
-                                <div class="col-12 pr-0 text-right">
+                                <div class="col-12 text-right">
+                                    <span class="ft_12px-s"> 12:43 pm</span>
+                                </div>
+                            </div>
+                            <!-- first person in chat -->
+                            <!-- next person in chat -->
+
+                            <div class="row py-3">
+                                <div class="col-xl-1 col-lg-1 col-md-1 col-1 px-0 px-lg-0 px-xl-0 px-md-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-xl-5 ml-lg-3 ml-md-2 ml-2">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-7 col-md-5 col-lg-6 col-xl-5 ml-md-0 ml-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                    </p>
+                                </div>
+                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-1 offset-xl-1 offset-md-1">
+                                    <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
+                                </div>
+                            </div>
+                            <!-- next person in chat -->
+
+                            <!-- first person in chat -->
+
+                            <div class="row py-3 justify-content-end">
+                                <div class="col-7 col-xl-5 col-lg-6 col-md-5 mr-2 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
+                                    </p>
+                                </div>
+                                <div class="col-1 mr-3 mr-lg-0 mr-xl-0 px-0 align-self-end">
+                                    <div class="profile_img_in_chat-s ml-md-2 ml-0">
+                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
+                                    </div>
+                                </div>
+                                <div class="col-12 text-right">
                                     <span class="ft_12px-s"> 12:43 pm</span>
                                 </div>
                             </div>
                             <!-- first person in chat -->
 
-                            <!-- next person in chat -->
-
-                            <div class="row py-3">
-                                <div class="col-1 px-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-5">
-                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-4 py-2 br_10x10-s ft_size_12px-s bg-greenish_grey-s word-break word-wrap">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
-                                    </p>
-                                </div>
-                                <div class="col-xl-8 col-lg-8 col-md-8 col-8 pl-0 offset-lg-1 offset-xl-1 offset-md-2">
-                                    <span class="ft_12px-s ml-3 ml-lg-4 ml-xl-2"> 12:43 pm</span>
-                                </div>
-                                <div class="col-7"></div>
-                            </div>
-                            <!-- next person in chat -->
-
-                            <!-- first person in chat -->
-
-                            <div class="row py-3">
-                                <div class="col-7"></div>
-                                <div class="col-4 py-2 br_10px10px-s ft_size_12px-s fg_white-s bg_green-s word-break word-wrap">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum bibendum justo at magna pulvinar
-                                    </p>
-                                </div>
-                                <div class="col-1 px-0 align-self-end">
-                                    <div class="profile_img_in_chat-s ml-4">
-                                        <img class="img_set_to_div-s" src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/close-up-of-tulips-blooming-in-field-royalty-free-image-1584131603.jpg" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- first person in chat -->
-
                             <!-- chat input - start -->
-                            <div class="input-group word-break word-wrap my-4">
-                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 br_10px-s textarea_h_w-s ft_size_14px-s border-0 shadow" id="simple-chat-message"></textarea>
-                                <div class="input-group-append">
-                                    <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a>>
-                                </div>
+                            <div class="input-group word-break word-wrap my-4 shadow">
+                                <textarea type="textarea" name="message" placeholder="Type your message....." class="form-control py-2 textarea_h_w-s ft_size_14px-s border-0" id="simple-chat-message"></textarea>
+                                <!-- <a class="" href="javascript:void(0)"><img src="assets/images/chat_send_icon.svg" alt=""></a> -->
+                                <span class="input-group-text bg-white border-0 br_right_10px-s"><img class="" src="assets/images/chat_send_icon.svg" alt=""></span>
                             </div>
                             <!-- chat input - end -->
                             <!-- chat room - end -->
