--- a/rating_player.html
+++ b/rating_player.html
@@ -32,9 +32,9 @@
             </div>
         </div>
 
-        <div class="container-fluid bg-white br_47px-s mt-5">
+        <div class="container-fluid bg-white br_47px-s mt-5 mh_86vh-s">
             <div class="row py-4 px-xl-4 px-3">
-                <div class="col-md-8 col-12 d-flex">
+                <div class="col-g-8 col-12 d-flex">
                     <div class="align-self-center">
                         <img src="assets/images/user_img.png" width="80" class="rounded-circle border_green-s" alt="">
                     </div>
@@ -51,18 +51,18 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="d-md-flex opacity_4-s">
-                            <h6>Age (year):</h6>
-                            <h6 class="pl-2 ">33</h6>
+                        <div class="d-flex opacity_4-s">
+                            <h6>Age(year):<span class="pl-1">33</span></h6>
+
                             <span class="px-2">|</span>
-                            <h6>Match:</h6>
-                            <h6 class="pl-2">30</h6>
+                            <h6>Match:<span class="pl-1">30</span></h6>
+
                             <span class="px-2">|</span>
-                            <h6>Missed:</h6>
-                            <h6 class="pl-2">5</h6>
+                            <h6>Missed:<span class="pl-1">5</span></h6>
+
                             <span class="px-2">|</span>
-                            <h6>Position:</h6>
-                            <h6 class="pl-2">Forward</h6>
+                            <h6>Position:<span class="pl-1">Forward</span></h6>
+
                         </div>
                     </div>
                 </div>
