integration of pages

--- a/game_invitation.html
+++ b/game_invitation.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="bg_img-s">
-    <!-- .................Home Page Start ......................... -->
+    <!-- .................Game invitation Page Start ......................... -->
     <div class="container-fluid px-0 mx-0 ">
         <!-- .................Home Page NavBar Start ......................... -->
 
@@ -535,7 +535,7 @@
 
 
 
-    <!-- .................Home Page End ......................... -->
+    <!-- .................Game invitation Page End ......................... -->
     <script src="assets/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
@@ -580,16 +580,7 @@
             } catch (e) {}
         });
     </script>
-    <script>
-        $("#switch_to_select_date-d").click(function() {
-            $("#accept_invitation_modal-d").modal('hide');
-            $("#select_date_modal-d").modal('show');
-        });
 
-        $(`#cal`).click(function() {
-            window.location.href = "hire_Players.html";
-        });
-    </script>
 </body>
 
 </html>
