--- a/about_us.html
+++ b/about_us.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="assets/css/main.css"/>
+    <link rel="stylesheet" href="assets/css/main.css" />
     <title>About Us</title>
 </head>
 
@@ -20,25 +20,27 @@
         <!-- .................Home Page NavBar Start ......................... -->
 
 
-            <div class="container-fluid px-xl-5 px-3">
-                <div class="row pt-5 pb-3">
-                    <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
-                        <h1 class="pr-2">More</h1>
-                        <h1 class="px-2"><strong>/</strong></h1>
-                        <h1 class="fg_green-s pl-2">About Us</h1>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
-                        <div class="">
-                            <a>
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span> Adailiya </span>
-                            </a>
-                            <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                            <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
-                        </div>
+        <div class="container-fluid px-xl-5 px-3">
+            <div class="row pt-5 pb-3">
+                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
+                    <a class="td_none-s" href="more.html">
+                        <h1 class="pr-2 text-dark">More</h1>
+                    </a>
+                    <h1 class="px-2"><strong>/</strong></h1>
+                    <h1 class="fg_green-s pl-2">About Us</h1>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
+                    <div class="">
+                        <a>
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                            <span> Adailiya </span>
+                        </a>
+                        <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
+                        <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
                     </div>
                 </div>
             </div>
+        </div>
         <!-- .................Home Page NavBar End ......................... -->
 
 
@@ -47,7 +49,11 @@
             <div class="row pt-5 px-xl-4">
                 <div class="col-6">
                     <img src="assets/images/black_logo.svg" width="100" class="" alt="Logo">
-                    <div class="position-absolute logo_text-s text-white"><h5><h3>LOGO</h3></h5></div>
+                    <div class="position-absolute logo_text-s text-white">
+                        <h5>
+                            <h3>LOGO</h3>
+                        </h5>
+                    </div>
                 </div>
                 <div class="col-6 justify-content-end align-self-center d-flex">
                     <div class="px-2">
@@ -66,12 +72,20 @@
             </div>
             <div class="row py-5 px-xl-4">
                 <div class="col-12">
-                    <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+                        unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                        voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+                        numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
                 <div class="col-12">
-                    <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                    <p class="text-wrap text-break fs_18px-s">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+                        unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia
+                        voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+                        numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 </div>
-            </div>    
+            </div>
 
         </div>
         <!-- container for favorite players - end -->
