--- a/edit_profile.html
+++ b/edit_profile.html
@@ -23,25 +23,27 @@
         <!-- .................Home Page NavBar Start ......................... -->
 
 
-            <div class="container-fluid px-xl-5 px-3">
-                <div class="row pt-5 pb-3">
-                    <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
-                        <h1 class="pr-2">More</h1>
-                        <h1 class="px-2"><strong>/</strong></h1>
-                        <h1 class="fg_green-s pl-2">Edit Personal Profile</h1>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
-                        <div class="">
-                            <a>
-                                <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
-                                <span> Adailiya </span>
-                            </a>
-                            <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
-                            <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
-                        </div>
+        <div class="container-fluid px-xl-5 px-3">
+            <div class="row pt-5 pb-3">
+                <div class="col-xl-8 col-lg-8 col-md-8 col-12 d-flex">
+                    <a class="td_none-s" href="more.html">
+                        <h1 class="pr-2 text-dark">More</h1>
+                    </a>
+                    <h1 class="px-2"><strong>/</strong></h1>
+                    <h1 class="fg_green-s pl-2">Edit Personal Profile</h1>
+                </div>
+                <div class="col-xl-4 col-lg-4 col-md-4 col-12 pt-2 text-right">
+                    <div class="">
+                        <a>
+                            <img src="assets/images/Location.svg" class="img-fluid nav_location_img" alt="navbar_home" />
+                            <span> Adailiya </span>
+                        </a>
+                        <img src="assets/images/Group 24.png" class="img-fluid nav_profile" alt="Navbar_profile" />
+                        <img src="assets/images/notification.svg" class="img-fluid nav_notification_img" alt="navbar_home" />
                     </div>
                 </div>
             </div>
+        </div>
         </nav>
         <!-- .................Home Page NavBar End ......................... -->
 
@@ -52,9 +54,9 @@
                 <div class="col-12 text-center">
                     <img src="assets/images/edit_profile.svg" class="position-absolute edit_profile-s" alt="edit profile icon">
                     <div>
-                        <img src="assets/images/user_img.png" width="128" class="border_green-s rounded-circle" alt="player img"> 
+                        <img src="assets/images/user_img.png" width="128" class="border_green-s rounded-circle" alt="player img">
                     </div>
-                    
+
                 </div>
             </div>
             <form action="" class="">
@@ -94,9 +96,9 @@
                             <label for="price-d"><strong><h4>PRICE</h4></strong></label>
                             <input type="number" class="form-control form-control-lg price-t rounded" value="$ 10" id="price-d" placeholder="price">
                         </div>
-                    </div>  
-                </div> 
-               
+                    </div>
+                </div>
+
 
                 <div class="row px-xl-5 px-3">
                     <div class="col-lg-4 col-12 pt-4">
@@ -128,14 +130,14 @@
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="midfielder-d" value="midfielder" checked>
                                 <span class="pl-3">Midfielder</span>
                             </label>
-                                <label class="form-check-label fs_18px-s ml-5">
+                            <label class="form-check-label fs_18px-s ml-5">
                                 <input class="form-check-input radio-inline mt-2 mr-3" type="radio" name="position" id="forward-d" value="forward">
                                 <span class="pl-3">Forward</span>
                             </label>
                         </div>
                     </div>
                 </div>
-            </form> 
+            </form>
             <div class="row px-xl-5 px-3 py-5">
                 <div class="col-12 text-right">
                     <button type="submit" class="btn bg_green-s br_10px-s py-3 text-white w_184px-s"><strong>SAVE</strong></button>
